fix hover on mobile bug

--- a/css/mediaq-portfolio.less
+++ b/css/mediaq-portfolio.less
@@ -317,5 +317,24 @@
 			}/*a*/
 		}/*#nav*/
 	}/*nav*/
-	
+
 }
+
+/*hover for mobile/touchscreen fix - only on screens > 1024*/
+
+@media only screen and (min-width:1024px){
+	nav {
+		#nav {
+			li {
+				a {
+
+                                        &:hover {
+						background: @red-color;
+					}/*hover*/
+
+				}/*a*/
+			}/*li*/
+		}/*#nav*/
+	}/*nav*/
+
+} /*end media query*/
