--- a/css/styles.less
+++ b/css/styles.less
@@ -65,11 +65,7 @@ nav {
 					-moz-transition: .5s all ease;
 					transition: .5s all ease;
                                         transition: .5s all ease;
-
-					&:hover {
-						background: @red-color;
-					}/*hover*/
-
+                                        
 					.icon {
 						margin: 0 .5em 0 0;
 						padding: 0;
